# WeMo

./: .gitignore  CMakeLists.txt  DllMain.cpp  LICENSE  Main.cpp  README.md  WeMo.cpp  WeMo.h  wemo.py  win32_exception.h
UPnP Device Description/: eventservice.xml  firmwareupdate.xml  metainfoservice.xml  remoteaccess.xml  rulesservice.xml  setup.xml  setupservice.xml  timesyncservice.xml
